Register-Invite, Users Page complete

--- a/package.json
+++ b/package.json
@@ -14,16 +14,19 @@
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@reduxjs/toolkit": "^1.9.5",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^4.32.6",
     "@tanstack/react-query-devtools": "^4.32.6",
+    "@types/google-map-react": "^2.1.10",
     "autoprefixer": "^10.4.20",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.9",
+    "google-map-react": "^2.2.1",
     "lucide-react": "^0.469.0",
     "postcss": "^8.4.49",
     "pwa-asset-generator": "^6.4.0",
@@ -41,6 +44,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@types/google.maps": "^3.58.1",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
