--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-icons": "^4.12.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
